Remove SetTarget events when finished

If the last event in the timeline is SetTarget, and the current value
is close enough to the final value, and if enough time has elapsed
since the beginning of the event, we can remove the SetTarget event
from the timeline.

Doing so allows all nodes to use the fast path because the AudioParam
is a constant over the rendering quantum.

Bug: 794712
Test: 
Change-Id: I7274f9ba10b4a31728c6329c0fca3394cb557e7f
Reviewed-on: https://chromium-review.googlesource.com/826124
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527127}
Former-commit-id: 383cca0d59f8ea979f2a702ca88d4a1aeb5dd18e